@@ -10,8 +10,10 @@ Built with Spring Boot {spring-boot-version}
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
  - https://github.com/codecentric/chaos-monkey-spring-boot/pull/296[#296] Renamed Integration to IntegrationTest
  - https://github.com/codecentric/chaos-monkey-spring-boot/pull/298[#298] Upgraded dependencies (spring boot, spring cloud, unleash, maven plugins)
+ - https://github.com/codecentric/chaos-monkey-spring-boot/pull/302[#302] Status endpoints always return 200 and the same json format.
 
 === New Features
+ - https://github.com/codecentric/chaos-monkey-spring-boot/pull/302[#302] Added enabledFor to status endpoints.
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
  - https://github.com/codecentric/chaos-monkey-spring-boot/pull/299[#299] Custom exception configuration supports static factory methods
 
